fixed content overflow

--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -37,6 +37,8 @@ body {
   }
 }
 .element-weekly-schedule {
+  grid-row: 1 / span 2;
+  grid-column: 3 /span 1;
   h2 {
     text-align: center;
   }
@@ -51,6 +53,16 @@ body {
   margin: 10px;
   background-color: $white;
   box-shadow: 0 0 5px rgb(150,150,150);
+  // &:after {
+  //   content: "";
+  //   display: table;
+  //   clear: both;
+  // }
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
 .profile-image {
   border-radius: 50%;
